--- a/index.html
+++ b/index.html
@@ -3,32 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Social links profile</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <title>Social links profile</title>
 </head>
 <body>
-
-  Jessica Randall
-  London, United Kingdom
-  "Front-end developer and avid reader."
-
-  GitHub
-  Frontend Mentor
-  LinkedIn
-  Twitter
-  Instagram
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="main-card">
+    <div class="profile">
+      <img src="assets\images\avatar-jessica.jpeg" alt="profile picture" class="profile__pic">
+      <div class="profile__info">
+        <h2 class="user-name">Matheus Franco</h2>
+        <h3 class="local">Sao Paulo, Brazil</h3>
+      </div>
+      <span class="profile__bio">"Front-end developer and avid runner"</span>
+    </div>
+    <div class="links">
+      <a href="#" class="links__github">GitHub</a>
+      <a href="#" class="links__mentor">Frontend Mentor</a>
+      <a href="#" class="links__linkedin">LinkedIn</a>
+      <a href="#" class="links__twitter">Twitter</a>
+      <a href="#" class="links__instagram">Instagram</a>
+    </div>
   </div>
 </body>
 </html>
