Update basic backgrounds

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Social links profile</title>
 </head>
@@ -18,11 +19,11 @@
       <span class="profile__bio">"Front-end developer and avid runner"</span>
     </div>
     <div class="links">
-      <a href="#" class="links__github">GitHub</a>
-      <a href="#" class="links__mentor">Frontend Mentor</a>
-      <a href="#" class="links__linkedin">LinkedIn</a>
-      <a href="#" class="links__twitter">Twitter</a>
-      <a href="#" class="links__instagram">Instagram</a>
+      <a href="#" class="links__github link">GitHub</a>
+      <a href="#" class="links__mentor link">Frontend Mentor</a>
+      <a href="#" class="links__linkedin link">LinkedIn</a>
+      <a href="#" class="links__twitter link">Twitter</a>
+      <a href="#" class="links__instagram link">Instagram</a>
     </div>
   </div>
 </body>
