Add the href to the links and put a new profile pic, also set the font family

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="main-card">
     <div class="profile">
-      <img src="assets\images\avatar-jessica.jpeg" alt="profile picture" class="profile__pic">
+      <img src="assets\images\matheus-profile-pic.jpeg" alt="profile picture" class="profile__pic" width="200px">
       <div class="profile__info">
         <h3 class="user-name">Matheus Franco</h3>
         <h4 class="local">Sao Paulo, Brazil</h4>
@@ -19,11 +19,11 @@
       <span class="profile__bio">"Front-end developer and avid runner"</span>
     </div>
     <div class="links">
-      <a href="#" class="links__github link">GitHub</a>
-      <a href="#" class="links__mentor link">Frontend Mentor</a>
-      <a href="#" class="links__linkedin link">LinkedIn</a>
-      <a href="#" class="links__twitter link">Twitter</a>
-      <a href="#" class="links__instagram link">Instagram</a>
+      <a href="https://github.com/mmacielfr" target="_blank" class="links__github link">GitHub</a>
+      <a href="https://www.frontendmentor.io/profile/mmacielfr" target="_blank" class="links__mentor link">Frontend Mentor</a>
+      <a href="https://www.linkedin.com/in/matheus-maciel-franco/" target="_blank" class="links__linkedin link">LinkedIn</a>
+      <!--<a href="#" class="links__twitter link">Twitter</a>-->
+      <a href="https://www.instagram.com/mmacielfr/" target="_blank" class="links__instagram link">Instagram</a>
     </div>
   </div>
 </body>
